# edge-t2s

./: '  Cargo.toml  settings.json
src/: cli.rs  lib.rs  main.rs  tts.rs  utils.rs
src/cli/: player.rs  settings.rs  utils.rs
src/cli/settings/: narrators.rs
src/cli/utils/: print.rs  to_uf8.rs
src/tts/: edge_tts.rs  ssml.rs
src/tts/edge_tts/: edge_tts_config.rs
src/utils/: find_audio_data_start.rs  gen_request_id.rs  now.rs
