[package]
name = "edge-t2s"
version = "0.1.0"
edition = "2024"

[lip]
name = "edge-t2s"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.88"
futures-util = "0.3.31"
http = "1.3.1"
tokio = { version = "1.45.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
tungstenite = "0.26.2"
url = "2.5.4"
uuid = {version = "1.16.0", features = ["v4"]}
